code/kubernetes/istio/grafana/virtualservice-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: istio-system # istio-system namespace 에 배포
spec:
  hosts:
    - "grafana.cowing.co.kr"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: grafana
            port:
              number: 3000
